--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.0-M3</version>
+                        <version>1.8.0_291</version>
                     </dependency>
                 </dependencies>
             </plugin>
