--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,14 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.2</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                         <fork>true</fork>
+                         <executable>C:\Program Files\Java\JDK\jdk1.8.0_291\bin\</executable>
                 </configuration>
             </plugin>
             <plugin>
