--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>16</java.version>
         <junit.jupiter.version>5.0.0-M3</junit.jupiter.version>
         <junit.platform.version>1.0.0-M3</junit.platform.version>
     </properties>
@@ -23,10 +23,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>16</source>
+                    <target>16</target>
                          <fork>true</fork>
-                         <executable>C:\Program Files\Java\JDK\jdk1.8.0_291\bin\</executable>
+                         <executable>C:\Program Files\Java\JDK\jdk-16\bin</executable>
                 </configuration>
             </plugin>
             <plugin>
@@ -61,7 +61,7 @@
     <repositories>
         <repository>
             <id>myMavenRepo.read</id>
-            <url>https://mymavenrepo.com/repo/FN8PIshHk5uALNhkXbhs/</url>
+            <url>https://github.com/Devu0704/jenkins-example.git/</url>
         </repository>
     </repositories>
 
@@ -79,11 +79,5 @@
         <url>https://github.com/Devu0704/jenkins-example.git</url>
     </snapshotRepository>
 </distributionManagement>
-<servers>
-        <server>
-            <id>my-internal-nexus-repo</id>
-            <username>yourUserName</username>
-            <password>yourPassword</password>
-        </server>
-</servers>
+
 </project>
